--- a/app/styles/components/sy-toggle.scss
+++ b/app/styles/components/sy-toggle.scss
@@ -1,4 +1,6 @@
 .sy-toggle {
+  display: flex;
+  align-items: center;
   cursor: pointer;
   margin: auto;
 
@@ -9,12 +11,11 @@
   &.inactive {
     color: $color-secondary;
   }
-}
-@media #{$lg-viewport} {
-  .sy-toggle {
-    margin: unset;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+
+  &.form-control {
+    background-color: unset;
+    border: unset;
+    box-shadow: unset;
   }
 }
 
