--- a/app/components/sy-toggle/template.hbs
+++ b/app/components/sy-toggle/template.hbs
@@ -4,12 +4,8 @@
   title={{concat @hint (if @disabled " (disabled)")}}
   tabindex="0"
   role="button"
-  {{on "click" (optional (unless @disabled (fn (optional @onToggle))))}}
-  {{on-key
-    "Space"
-    (optional (unless @disabled (fn (optional @onToggle))))
-    onlyWhenFocused=true
-  }}
+  {{on "click" (optional (unless @disabled @onToggle))}}
+  {{on "keyup" this.handleKeyUp}}
 >
   {{#if (has-block)}}
     {{yield}}
