fix(task-selection): re-enable enter+tab pattern
To re-enable the established pattern of 'select a
customer via enter and tabbing to next input,
should open dropdown automatically' the optimized
power-select needed some treatment.

--- a/app/components/optimized-power-select/template.hbs
+++ b/app/components/optimized-power-select/template.hbs
@@ -13,4 +13,5 @@
   @triggerComponent={{component "optimized-power-select/trigger"}}
   @onChange={{@onChange}}
   @extra={{this.extra}}
+  @onFocus={{this.onFocus}}
 />
