--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import "components/date-navigation";
 @import "components/nav-top";
 @import "components/tracking-bar";
+@import "components/record-button";
 @import "components/sort-header";
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
