refactor(sy-modal): glimmerify
Includes also the welcome-modal and sy-modal-target components

--- a/app/components/sy-modal/header/template.hbs
+++ b/app/components/sy-modal/header/template.hbs
@@ -1,6 +1,11 @@
 <div ...attributes class="modal-header">
   {{yield}}
-  <button type="button" class="close" aria-label="Close" {{on "click" @close}}>
+  <button
+    type="button"
+    class="close"
+    aria-label="Close"
+    {{on "click" (optional @close)}}
+  >
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
