--- a/app/components/sy-modal/overlay/template.hbs
+++ b/app/components/sy-modal/overlay/template.hbs
@@ -1,1 +1,6 @@
-{{yield}}
+<div
+  class="modal modal-overlay {{if @visible 'modal--visible'}}"
+  {{did-insert this.setupClickHandler}}
+>
+  {{yield}}
+</div>
