--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -24,7 +24,7 @@
 
 <SyModal
   @visible={{this.showReschedule}}
-  @on-close={{toggle "showReschedule" this}}
+  @onClose={{toggle "showReschedule" this}}
   @size="small"
   as |modal|
 >
