--- a/app/protected/template.hbs
+++ b/app/protected/template.hbs
@@ -9,7 +9,7 @@
 
 <WelcomeModal
   @visible={{this.visible}}
-  @on-never={{this.neverTour}}
-  @on-later={{this.laterTour}}
-  @on-start={{this.startTour}}
+  @onNever={{this.neverTour}}
+  @onLater={{this.laterTour}}
+  @onStart={{this.startTour}}
 />
