--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,13 +1,13 @@
 {{#if @visible}}
   <EmberWormhole @to="sy-modals">
-    <SyModal::Overlay @visible={{@visible}} @on-close={{this.close}}>
+    <SyModal::Overlay @visible={{@visible}} @onClose={{optional @onClose}}>
       <div class="modal-dialog {{if @size (concat 'modal-dialog--' @size)}}">
         {{yield
           (hash
-            header=(component "sy-modal/header" close=this.close)
-            body=(component "sy-modal/body" close=this.close)
-            footer=(component "sy-modal/footer" close=this.close)
-            close=(this.close)
+            header=(component "sy-modal/header" close=(optional @onClose))
+            body=(component "sy-modal/body" close=(optional @onClose))
+            footer=(component "sy-modal/footer" close=(optional @onClose))
+            close=(optional @onClose)
           )
         }}
       </div>
