--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,8 @@
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
 @import "components/sy-durationpicker-day";
+@import "components/sy-modal--footer";
+@import "components/sy-modal--overlay";
 @import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
