fix(activities): reload weekly overview
When closing the absence modal dialog the overview
data will refetch, since it's quite probable this
has led to a data change. The overhead in case nothing
changed is acceptable.

--- a/app/components/sy-modal/header/template.hbs
+++ b/app/components/sy-modal/header/template.hbs
@@ -1,11 +1,6 @@
 <div ...attributes class="modal-header">
   {{yield}}
-  <button
-    type="button"
-    class="close"
-    aria-label="Close"
-    {{on "click" (optional @close)}}
-  >
+  <button type="button" class="close" aria-label="Close" {{on "click" @close}}>
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
