fix(reject-report): display rejected reports to responsible
The frontend should warn the user who created the wrong report
about the rejection. Not the reviewer.

Further this fixes the icon used for the warning.

--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -1,4 +1,4 @@
-<div class="flex">
+<div class="flex height-100">
   {{#if this.unverifiedReports.hasReports}}
     <li class="nav-top-list-item" title="You have reports to verify">
       <LinkTo
@@ -31,21 +31,21 @@
         @query={{hash
           fromDate=null
           toDate=this.unverifiedReports.reportsToDate
-          reviewer=this.session.data.user.id
+          user=this.session.data.user.id
           editable=1
           rejected=1
           verified=0
           customer=null
           project=null
           task=null
-          user=null
+          reviewer=null
           billingType=null
           costCenter=null
           review=""
           notBillable=""
         }}
       >
-        <FaIcon @icon="times-circle" />
+        <FaIcon @icon="circle-xmark" />
         {{this.rejectedReports.amountReports}}
       </LinkTo>
     </li>
