feat(remaining-effort): add re feature to project statistics

--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -69,7 +69,10 @@
           {{/each}}
           <td>
             {{#let
-              (add row.duration row.mostRecentRemainingEffort)
+              (add
+                row.duration
+                (or row.totalRemainingEffort row.mostRecentRemainingEffort)
+              )
               as |allotted|
             }}
               <StatisticList::Bar
