fix(statistic-list): improve remaining effort bar chart rendering
The old implementation would not show remaining effort if it's the
biggest value accross the bars (value of 1).

--- a/app/components/statistic-list/bar/template.hbs
+++ b/app/components/statistic-list/bar/template.hbs
@@ -5,7 +5,7 @@
     class="statistic-list-bar"
     {{style --value=(concat @value)}}
   ></div>
-  {{#if (and @remaining (lt @remaining 1))}}
+  {{#if (and @remaining (lte @remaining 1))}}
     <div
       ...attributes
       class="statistic-list-bar remaining
@@ -17,7 +17,7 @@
     <div
       ...attributes
       class="statistic-list-bar-goal"
-      {{style --goal=(concat @goal)}}
+      {{style --goal=(concat (min "0.99" @goal))}}
     ></div>
   {{/if}}
 </div>
