fix(record-button): layout on different view port sizes
Fixes:
* record button proportions on various screen sizes
* tidy up class definitions
* center play icon on record button via small transformation

--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -1,7 +1,4 @@
-<div
-  class="record-button-container record-button-container--start-stop
-    {{if this.active 'recording'}}"
->
+<div class="record-button-container {{if this.active 'recording'}}">
   {{#if this.active}}
     <button
       data-test-record-stop
@@ -21,7 +18,7 @@
       class="record-button record-button--start"
       {{on "click" (prevent-default (optional @onStart))}}
     >
-      <FaIcon @icon="play" @prefix="fas" />
+      <FaIcon @icon="play" @prefix="fas" @transform="right-1" />
     </button>
   {{/if}}
 </div>
