--- a/app/styles/components/record-button.scss
+++ b/app/styles/components/record-button.scss
@@ -5,20 +5,20 @@
   background: rgb(80, 80, 80);
   border-radius: 1.5rem;
   height: 3rem;
-  width:  3rem;
+  width: 3rem;
+  margin: 0 auto;
   transition: width 300ms ease;
   font-family: $font-family-mono;
   font-size: 14px;
-
-
-  .record-button-container--start-stop {
-  width: 9.5rem;
-}
 
   .record-button-timer {
     opacity: 1;
     pointer-events: all;
     transition: opacity 100ms ease 200ms;
+  }
+
+  &.recording {
+    width: 10rem;
   }
 }
 
@@ -26,7 +26,7 @@
   position: absolute;
   top: 0.4rem;
   left: 0.4rem;
-  width:  2.2rem;
+  width: 2.2rem;
   height: 2.2rem;
   padding: 0;
   border-radius: 50%;
@@ -62,6 +62,11 @@
   text-align: right;
 }
 
+@media #{$md-viewport} {
+  .record-button-container.recording {
+    width: 9rem;
+  }
+}
 
 @media #{$lg-viewport} {
   .record-button-container {
@@ -70,11 +75,7 @@
     width: 2rem;
 
     &.recording {
-      width: 7rem;
-    }
-
-    .record-button-container--start-stop {
-      width: 7rem;
+      width: 7.5rem;
     }
   }
 
