chore: bump displayed version to 3.0.0-rc

--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -12,7 +12,7 @@
       <div class="nav-top-header-title">
         Timed
         <div class="nav-top-header-title-version">
-          v{{app-version hideSha=true}}
+          v{{app-version versionOnly=true showExtended=true}}
         </div>
       </div>
     </LinkTo>
