refactor(record-button): make css a little more BEM-like

--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -1,4 +1,7 @@
-<div class="record-button-container {{if this.active 'recording'}}">
+<div
+  class="record-button-container
+    {{if this.active 'record-button-container--recording'}}"
+>
   {{#if this.active}}
     <button
       data-test-record-stop
