--- a/app/styles/components/record-button.scss
+++ b/app/styles/components/record-button.scss
@@ -11,59 +11,51 @@
   font-family: $font-family-mono;
   font-size: 14px;
 
-  .record-button-timer {
-    opacity: 1;
-    pointer-events: all;
-    transition: opacity 100ms ease 200ms;
-  }
-
-  &.recording {
+  &--recording {
     width: 10rem;
   }
-}
 
-.record-button {
-  position: absolute;
-  top: 0.4rem;
-  left: 0.4rem;
-  width: 2.2rem;
-  height: 2.2rem;
-  padding: 0;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  background: radial-gradient(
-    circle at center,
-    rgb(240, 240, 240) 50%,
-    rgb(180, 180, 180) 80%
-  );
-  z-index: 2;
+  .record-button {
+    position: absolute;
+    top: 0.4rem;
+    left: 0.4rem;
+    width: 2.2rem;
+    height: 2.2rem;
+    padding: 0;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    background: radial-gradient(
+      circle at center,
+      rgb(240, 240, 240) 50%,
+      rgb(180, 180, 180) 80%
+    );
+    z-index: 2;
 
-  svg {
-    vertical-align: middle;
+    svg {
+      vertical-align: middle;
+    }
+
+    &--start,
+    &--stop {
+      color: $color-danger;
+    }
   }
-}
 
-.record-button--start,
-.record-button--stop {
-  color: $color-danger;
-}
-
-.record-button-timer {
-  position: absolute;
-  right: 0.8rem;
-  top: 50%;
-  transform: translateY(-50%);
-  color: rgb(255, 255, 255);
-  overflow: hidden;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 200ms ease;
-  text-align: right;
+  .record-button-timer {
+    position: absolute;
+    right: 0.8rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+    overflow: hidden;
+    pointer-events: none;
+    text-align: right;
+  }
 }
 
 @media #{$md-viewport} {
-  .record-button-container.recording {
+  .record-button-container--recording {
     width: 9rem;
   }
 }
@@ -74,15 +66,15 @@
     height: 2rem;
     width: 2rem;
 
-    &.recording {
+    &--recording {
       width: 7.5rem;
     }
-  }
 
-  .record-button {
-    height: 1.6rem;
-    width: 1.6rem;
-    top: 0.2rem;
-    left: 0.2rem;
+    .record-button {
+      height: 1.6rem;
+      width: 1.6rem;
+      top: 0.2rem;
+      left: 0.2rem;
+    }
   }
 }
