fix(reject-report): delete date restriction for rejected reports

--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -30,7 +30,7 @@
         @route="analysis.index"
         @query={{hash
           fromDate=null
-          toDate=this.unverifiedReports.reportsToDate
+          toDate=null
           user=this.session.data.user.id
           editable=1
           rejected=1
