chore(reject template): add further information to reject mail template

--- a/timed/tracking/templates/mail/notify_user_rejected_reports.tmpl
+++ b/timed/tracking/templates/mail/notify_user_rejected_reports.tmpl
@@ -1,5 +1,6 @@
 {% load tracking_extras %}
-Some of your reports have been rejected.
+Some of your reports have been rejected by a reviewer. Please get in contact
+with them to clarify the reports.
 
 Reviewer: {{reviewer.first_name }} {{ reviewer.last_name }}
 {% for changeset in user_changes %}
