--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -38,192 +38,222 @@
       </PowerSelect>
     </div>
     {{#if this.selectedProject}}
-      <h2>
-        <span class="header-left">
-          {{this.selectedProject.name}}
-        </span>
-      </h2>
-      <ValidatedForm
-        @model={{changeset this.selectedProject this.projectValidations}}
-        @on-submit={{perform this.saveProject}}
-        as |f|
-      >
-        <f.input @name="remainingEffortTracking" as |fi|>
-          <SyCheckbox
-            data-test-remaing-effort-tracking
-            @checked={{this.selectedProject.remainingEffortTracking}}
-            @value={{fi.value}}
-            @onChange={{fi.update}}
-          >Remaining Effort Tracking</SyCheckbox>
-        </f.input>
-        {{#if
-          (and
-            this.selectedProject.remainingEffortTracking
-            this.selectedProject.totalRemainingEffort
-          )
-        }}
-          Total remaing effort:
-          {{humanize-duration this.selectedProject.totalRemainingEffort}}
-        {{/if}}
+      {{#let
+        this.selectedProject.remainingEffortTracking
+        as |remainingEffortTracking|
+      }}
+        <h2>
+          <span class="header-left">
+            {{this.selectedProject.name}}
+          </span>
+        </h2>
+        <ValidatedForm
+          @model={{changeset this.selectedProject this.projectValidations}}
+          @on-submit={{perform this.saveProject}}
+          as |f|
+        >
+          <f.input @name="remainingEffortTracking" as |fi|>
+            <SyCheckbox
+              data-test-remaing-effort-tracking
+              @checked={{remainingEffortTracking}}
+              @value={{fi.value}}
+              @onChange={{fi.update}}
+            >Remaining Effort Tracking</SyCheckbox>
+          </f.input>
+          {{#if
+            (and
+              remainingEffortTracking this.selectedProject.totalRemainingEffort
+            )
+          }}
+            Total remaing effort:
+            {{humanize-duration this.selectedProject.totalRemainingEffort}}
+          {{/if}}
 
-        <div class="btn-toolbar btn-toolbar--right">
-          {{#each f.model.errors as |error|}}
-            <div class="validation-error-icon" title={{error.validation}}>
-              <FaIcon @icon="exclamation-triangle" @prefix="fas" />
-            </div>
-          {{/each}}
-
-          <f.submit
-            data-test-project-save
-            @disabled={{f.model.isInvalid}}
-            @triggerValidations={{true}}
-          >Update
-          </f.submit>
-        </div>
-      </ValidatedForm>
-
-      <hr />
-      <h3>
-        <span class="header-left">
-          Tasks
-        </span>
-        <span class="header-right">
-          <button
-            class="btn btn-primary"
-            data-test-add-task
-            type="button"
-            {{on "click" (perform this.createTask)}}
-          >Add Task</button>
-        </span>
-      </h3>
-      <div class="task-table-container">
-        <EmberScrollable @class="projects-scrollable-container">
-          <table
-            class="table table--striped table--projects"
-            data-test-tasks-table
-          >
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Reference</th>
-                <th>Estimated time</th>
-                <th>Archived</th>
-              </tr>
-            </thead>
-            <tbody>
-              {{#each this.tasks as |task|}}
-                <tr
-                  class="pointer {{if (eq this.selectedTask task) 'selected'}}"
-                  {{! template-lint-disable }}
-                  {{on "click" (fn (mut this.selectedTask) task)}}
-                  data-test-task-table-row
-                >
-                  <td data-test-table-name>{{task.name}}</td>
-                  <td data-test-table-reference>{{if
-                      task.reference
-                      task.reference
-                      "-"
-                    }}</td>
-                  <td data-test-table-estimated-time>{{if
-                      task.estimatedTime
-                      (humanize-duration task.estimatedTime)
-                      "-"
-                    }}</td>
-                  <td><SyCheckmark
-                      data-test-table-archived
-                      @checked={{task.archived}}
-                    /></td>
-                </tr>
-              {{/each}}
-            </tbody>
-          </table>
-        </EmberScrollable>
-      </div>
-      {{#if this.selectedTask}}
-        <div class="task-form-container" data-test-task-form>
-          <h3>{{if
-              this.selectedTask.isNew
-              "Add task"
-              this.selectedTask.name
-            }}</h3>
-          <ValidatedForm
-            @model={{changeset this.selectedTask this.taskValidations}}
-            @on-submit={{perform this.saveTask}}
-            as |f|
-          >
-            <div class="task-form-container-row">
-              <div class="task-form-container-column">
-                <f.input
-                  @label="Name"
-                  @name="name"
-                  data-test-name
-                  @required={{true}}
-                />
-                <f.input
-                  @label="Reference"
-                  @name="reference"
-                  data-test-reference
-                  @required={{false}}
-                />
+          <div class="btn-toolbar btn-toolbar--right">
+            {{#each f.model.errors as |error|}}
+              <div class="validation-error-icon" title={{error.validation}}>
+                <FaIcon @icon="exclamation-triangle" @prefix="fas" />
               </div>
-              <div class="task-form-container-column">
-                <f.input @name="estimatedTime" as |fi|>
-                  <div class="form-group">
-                    <label>
-                      Estimated time
-                    </label>
-                    <SyDurationpicker
-                      data-test-estimated-time={{true}}
-                      @value={{fi.value}}
-                      @onChange={{(queue
-                        fi.update (fn this.updateRemainingEffort f.model)
-                      )}}
-                    />
-                  </div>
-                </f.input>
+            {{/each}}
 
-                {{#if this.selectedProject.remainingEffortTracking}}
-                  <f.input @name="mostRecentRemainingEffort" as |fi|>
+            <f.submit
+              data-test-project-save
+              @disabled={{f.model.isInvalid}}
+              @triggerValidations={{true}}
+            >Update
+            </f.submit>
+          </div>
+        </ValidatedForm>
+
+        <hr />
+        <h3>
+          <span class="header-left">
+            Tasks
+          </span>
+          <span class="header-right">
+            <button
+              class="btn btn-primary"
+              data-test-add-task
+              type="button"
+              {{on "click" (perform this.createTask)}}
+            >Add Task</button>
+          </span>
+        </h3>
+        <div class="task-table-container">
+          <EmberScrollable @class="projects-scrollable-container">
+            <table
+              class="table table--striped table--projects"
+              data-test-tasks-table
+            >
+              <colgroup>
+                <col class="title" />
+                <col class="reference" />
+                <col class="duration" />
+                {{#if remainingEffortTracking}}
+                  <col class="duration" />
+                {{/if}}
+                <col class="archived" />
+              </colgroup>
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Reference</th>
+                  <th>Estimated time</th>
+                  {{#if remainingEffortTracking}}
+                    <th>Remaining effort</th>
+                  {{/if}}
+                  <th>Archived</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#each this.tasks as |task|}}
+                  <tr
+                    class="pointer
+                      {{if (eq this.selectedTask task) 'selected'}}"
+                    {{! template-lint-disable }}
+                    {{on "click" (fn (mut this.selectedTask) task)}}
+                    data-test-task-table-row
+                  >
+                    <td data-test-table-name>{{task.name}}</td>
+                    <td data-test-table-reference>{{if
+                        task.reference
+                        task.reference
+                        "-"
+                      }}</td>
+                    <td data-test-table-estimated-time>{{if
+                        task.estimatedTime
+                        (humanize-duration task.estimatedTime)
+                        "-"
+                      }}</td>
+
+                    {{#if remainingEffortTracking}}
+                      <td data-test-table-most-recent-remaining-effort>{{if
+                          task.mostRecentRemainingEffort
+                          (humanize-duration task.mostRecentRemainingEffort)
+                          "-"
+                        }}</td>
+                    {{/if}}
+                    <td><SyCheckmark
+                        data-test-table-archived
+                        @checked={{task.archived}}
+                      /></td>
+                  </tr>
+                {{/each}}
+              </tbody>
+            </table>
+          </EmberScrollable>
+        </div>
+        {{#if this.selectedTask}}
+          <div class="task-form-container" data-test-task-form>
+            <h3>{{if
+                this.selectedTask.isNew
+                "Add task"
+                this.selectedTask.name
+              }}</h3>
+            <ValidatedForm
+              @model={{changeset this.selectedTask this.taskValidations}}
+              @on-submit={{perform this.saveTask}}
+              as |f|
+            >
+              <div class="task-form-container-row">
+                <div class="task-form-container-column">
+                  <f.input
+                    @label="Name"
+                    @name="name"
+                    data-test-name
+                    @required={{true}}
+                  />
+                  <f.input
+                    @label="Reference"
+                    @name="reference"
+                    data-test-reference
+                    @required={{false}}
+                  />
+                </div>
+                <div class="task-form-container-column">
+                  <f.input @name="estimatedTime" as |fi|>
                     <div class="form-group">
                       <label>
-                        Remaing effort
+                        Estimated time
                       </label>
                       <SyDurationpicker
-                        data-test-remaining-effort={{true}}
+                        data-test-estimated-time={{true}}
+                        @value={{fi.value}}
+                        @onChange={{(if
+                          remainingEffortTracking
+                          (queue
+                            fi.update (fn this.updateRemainingEffort f.model)
+                          )
+                          fi.update
+                        )}}
+                      />
+                    </div>
+                  </f.input>
+
+                  {{#if remainingEffortTracking}}
+                    <f.input @name="mostRecentRemainingEffort" as |fi|>
+                      <div class="form-group">
+                        <label>
+                          Remaing effort
+                        </label>
+                        <SyDurationpicker
+                          data-test-remaining-effort={{true}}
+                          @value={{fi.value}}
+                          @min={{0}}
+                          @onChange={{fi.update}}
+                        />
+                      </div>
+                    </f.input>
+                  {{/if}}
+
+                  <f.input @name="archived" as |fi|>
+                    <div class="form-group">
+                      <label>
+                        Archived
+                      </label>
+                      <SyCheckbox
+                        data-test-archived
+                        @checked={{this.selectedTask.archived}}
                         @value={{fi.value}}
                         @onChange={{fi.update}}
                       />
                     </div>
                   </f.input>
-                {{/if}}
-
-                <f.input @name="archived" as |fi|>
-                  <div class="form-group">
-                    <label>
-                      Archived
-                    </label>
-                    <SyCheckbox
-                      data-test-archived
-                      @checked={{this.selectedTask.archived}}
-                      @value={{fi.value}}
-                      @onChange={{fi.update}}
-                    />
-                  </div>
-                </f.input>
+                </div>
               </div>
-            </div>
-            <div class="btn-toolbar btn-toolbar--right">
-              <button
-                class="btn btn-primary"
-                data-test-cancel
-                type="button"
-                {{on "click" (fn (mut this.selectedTask) null)}}
-              >Cancel</button>
-              <f.submit data-test-save @disabled={{f.model.isInvalid}} />
-            </div>
-          </ValidatedForm>
-        </div>
-      {{/if}}
+              <div class="btn-toolbar btn-toolbar--right">
+                <button
+                  class="btn btn-primary"
+                  data-test-cancel
+                  type="button"
+                  {{on "click" (fn (mut this.selectedTask) null)}}
+                >Cancel</button>
+                <f.submit data-test-save @disabled={{f.model.isInvalid}} />
+              </div>
+            </ValidatedForm>
+          </div>
+        {{/if}}
+      {{/let}}
     {{else}}
       <div class="empty" data-test-none-selected>
         <div>
