fix(weekly-overview): refresh weekly overview graph
The formerly implemented tracked task did not properly
refresh on store updates, so we switched to a tracked
function.

--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -9,7 +9,7 @@
     </div>
     <div class="grid-cell visible-md">
       <WeeklyOverview @expected={{this.expectedWorktime}}>
-        {{#each this.weeklyOverviewData as |d|}}
+        {{#each this.weeklyOverviewData.value as |d|}}
           <WeeklyOverviewDay
             @day={{d.day}}
             @active={{d.active}}
