feat: gray background color for the archived projects

--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -34,7 +34,7 @@
         @disabled={{not this.selectedCustomer}}
         as |project|
       >
-        <div>{{project.name}}</div>
+        <div class={{if project.archived "archived-background-color"}}>{{project.name}}</div>
       </PowerSelect>
     </div>
     {{#if this.selectedProject}}
