--- a/app/components/date-buttons/template.hbs
+++ b/app/components/date-buttons/template.hbs
@@ -1,3 +1,3 @@
 {{#each this.choices as |choice index|}}
-  <button class="btn date-button" data-test-preset-date={{index}} type="button" {{action "selectDate" choice}}>{{choice}}</button>
+  <button class="btn date-button" data-test-preset-date={{index}} type="button" {{on "click" (fn this.selectDate choice)}}>{{choice}}</button>
 {{/each}}
