fix: form elements require a valid associated label

--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -20,6 +20,7 @@
       <div class="form-group" data-test-tracking-comment>
         <Input
           @type="text"
+          id="task-comment"
           class="form-control"
           placeholder="Comment"
           name="comment"
