fix: use component lifecycle hooks

--- a/app/components/in-viewport/template.hbs
+++ b/app/components/in-viewport/template.hbs
@@ -1,3 +1,2 @@
 <div
-  {{did-insert this.registerObserver}}
-  {{will-destroy this.disconnectObserver}}>{{yield}}</div>
+  {{did-insert this.registerObserver}}>{{yield}}</div>
