fix: hbs warnings

--- a/app/components/paginated-table/foot/template.hbs
+++ b/app/components/paginated-table/foot/template.hbs
@@ -4,7 +4,7 @@
     {{#if (gt this.pages 1)}}
       <PaginationPager @current={{this.page}} @count={{this.pages}} @class="pagination-nav" />
     {{/if}}
-    {{pagination-limit page=this.page page_size=this.page_size}}
+    <PaginationLimit page={{this.page}} page_size={{this.page_size}} />
   </td>
 </tr>
 {{yield to='inverse'}}
