--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -74,7 +74,7 @@
       >
         <tr
           role="link"
-          {{on "click" (perform this.viewUserProfile user.id)}}
+          {{on "click" (fn this.viewUserProfile user.id)}}
           class="pointer"
         >
           <td
