--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -72,10 +72,9 @@
         @containerSelector=".page-content--scroll"
         as |user|
       >
-        <LinkTo
-          @route="users.edit"
-          @model={{user.id}}
-          @tagName="tr"
+        <tr
+          role="link"
+          {{on "click" (fn this.viewUserProfile user.id)}}
           class="pointer"
         >
           <td
@@ -99,7 +98,7 @@
               {{format-duration user.currentWorktimeBalance.balance false}}
             </span>
           </td>
-        </LinkTo>
+        </tr>
       </VerticalCollection>
     </table>
   {{/if}}
