fix(sy-checkbox): add scss for indeterminate state

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,7 @@
 @import "components/sort-header";
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
+@import "components/sy-checkbox";
 @import "components/sy-datepicker";
 @import "components/sy-durationpicker-day";
 @import "components/sy-modal--footer";
