fix(task-selection): make selection more robust
* multiple selection of the same recent task won't reset project & task
* initial selection will now resolve proxies to determine state

--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -12,7 +12,7 @@
       <TaskSelection
         @initial={{hash task=this.changeset.task}}
         @task={{this.changeset.task}}
-        @on-set-task={{fn this.setTask this.changeset.task}}
+        @on-set-task={{fn this.setTask this.changeset}}
         as |t|
       >
         <div class="form-group">{{t.customer}}</div>
