fix: changed warning component

--- a/app/components/changed-warning/template.hbs
+++ b/app/components/changed-warning/template.hbs
@@ -1,1 +1,3 @@
-&nbsp;<FaIcon @icon="exclamation-triangle" @prefix="fas" />
+<span title="This field has unsaved changes" class="color-warning">
+  &nbsp;<FaIcon @icon="exclamation-triangle" @prefix="fas" />
+</span>
