fix: use offecial task state isError in async list component

--- a/app/components/async-list/template.hbs
+++ b/app/components/async-list/template.hbs
@@ -2,7 +2,7 @@
   <div class="empty">
     <LoadingIcon />
   </div>
-{{else if (not @data)}}
+{{else if @data.isError}}
   <div class="empty">
     <div>
       <FaIcon @icon="bolt" @prefix="fas" />
