fix(customer-visible-icon): splatter attributes

--- a/app/components/customer-visible-icon/template.hbs
+++ b/app/components/customer-visible-icon/template.hbs
@@ -1,3 +1,3 @@
-<div title="This project's comments are visible to the customer">
+<div ...attributes title="This project's comments are visible to the customer">
   <FaIcon @icon="eye" />
 </div>
