--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,7 @@
 @import "tour";
 @import "users-navigation";
 @import "users";
+@import "login";
 
 /* Component styles */
 @import "components/attendance-slider";
