--- a/app/components/statistic-list/bar/template.hbs
+++ b/app/components/statistic-list/bar/template.hbs
@@ -2,7 +2,10 @@
 
   <div
     ...attributes
-    class="statistic-list-bar"
+    class="statistic-list-bar
+    {{if this.didFinishEffortsInBudget 'strong-success'}}
+    {{if this.didFinishEffortsOverBudget 'strong-danger'}}
+    "
     {{style --value=(concat @value)}}
   ></div>
   {{#if (and @remaining (lte @remaining 1))}}
