fix: refactor not identical warning to glimmer component

--- a/app/components/not-identical-warning/template.hbs
+++ b/app/components/not-identical-warning/template.hbs
@@ -1,1 +1,3 @@
-&nbsp;<FaIcon @icon="info-circle" @prefix="fas" />
+<span class="color-info" title="Not all of the provided values are identical">
+  &nbsp;<FaIcon @icon="info-circle" @prefix="fas" />
+</span>
