refactor(loading-icon): to glimmer syntax

--- a/app/components/loading-icon/template.hbs
+++ b/app/components/loading-icon/template.hbs
@@ -1,9 +1,11 @@
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
-<span class="loading-dot"></span>
+<div class="loading-icon">
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+  <span class="loading-dot"></span>
+</div>
