--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -45,6 +45,7 @@
 @import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
+@import "components/loading-icon";
 
 html {
   hyphens: auto;
