fix(statistics-list): allotted efforts calculation
The remaining effort is a duration object, which needs to be
used in a calculation. Pure existance check is not sufficient
at this place, as duration of 0 is still a valid duration object.

--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -73,7 +73,7 @@
               as |remainingEffort|
             }}
               {{#let
-                (if remainingEffort (add row.duration remainingEffort) 0)
+                (if (gt remainingEffort 0) (add row.duration remainingEffort) 0)
                 as |allotted|
               }}
                 <StatisticList::Bar
